--- a/index.html
+++ b/index.html
@@ -399,13 +399,13 @@
         <form>
 
             <label>Name:</label>
-            <input type="text" style="width: 100%;">
+            <input type="text" style="width: 100%;" placeholder="Enter Your Name here ">
 
             <label>Email:</label>
-            <input type="email" style="width: 100%;">
+            <input type="email" style="width: 100%;" placeholder="Enter Your Mail here ">
 
             <label>Phone:</label>
-            <input type="text" style="width: 100%;">
+            <input type="text" style="width: 100%;" placeholder="Enter Your Number here ">
 
             <label>Date:</label>
             <input type="date" style="width: 100%;">
@@ -423,7 +423,7 @@
         <h2>Search Products</h2>
         <form>
             <label>Enter product name:</label>
-            <input type="text">
+            <input type="text" placeholder="Enter Your Product Name here ">
             <button>Search</button>
         </form>
     </section>
@@ -434,13 +434,13 @@
 
         <form>
             <label>Name:</label>
-            <input type="text">
+            <input type="text" placeholder="Enter Your Name here ">
 
             <label>Email:</label>
-            <input type="email">
+            <input type="email" placeholder="Enter Your Email here ">
 
             <label>Issue Description:</label>
-            <textarea rows="4"></textarea>
+            <textarea rows="4" placeholder="Enter Your Issue here "></textarea>
 
             <button>Submit Issue</button>
         </form>
